--- a/code/src/css/index.scss
+++ b/code/src/css/index.scss
@@ -112,9 +112,7 @@
     font-size: 1.4em;
   }
 
-  h3 {
-    font-size: 1.3em;
-  }
+  h3,
   h4,
   h5,
   h6 {
@@ -128,19 +126,19 @@
 
 // 滚动条样式
 ::-webkit-scrollbar {
-  width:4px;
+  width: 4px;
 }
 /* 滚动槽 */
 ::-webkit-scrollbar-track {
-  -webkit-box-shadow:inset 0 0 6px rgba(0,0,0,0.3);
-  border-radius:10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
 }
 /* 滚动条滑块 */
 ::-webkit-scrollbar-thumb {
-  border-radius:10px;
-  background:rgba(0,0,0,0.1);
-  -webkit-box-shadow:inset 0 0 6px rgba(0,0,0,0.5);
+  border-radius: 10px;
+  background: rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
 }
 ::-webkit-scrollbar-thumb:window-inactive {
-  background:rgba(0,0,0,0.3);
+  background: rgba(0, 0, 0, 0.3);
 }
