--- a/code/src/css/index.scss
+++ b/code/src/css/index.scss
@@ -12,6 +12,7 @@
   align-content: center;
   .my-header {
     min-width: 100%;
+    border-bottom: 1px solid #eee;
   }
   .my-main {
     flex-grow: 1;
@@ -20,7 +21,7 @@
     flex-direction: row;
     justify-content: center;
     background-color: #f4f5f7;
-    padding-bottom: 60px;
+    // padding-bottom: 60px;
   }
   .my-footer {
     min-width: 100%;
